--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="header">Etch-A-Sketch</h1>
     <div class="button-container">
-        <button>Select Grid Size</button>
+        <button id="btn">Select Grid Size</button>
     </div>
     <div class="container"></div>
 
