--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <div class="button-container">
         <button id="btn">Select Grid Size</button>
     </div>
-    <div class="container"></div>
+    <div class="grid-container">
+        <div class="grid"></div>
+    </div>
 
 
     <script src="etch-a-sketch.js" charset="utf-8"></script>
